--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
         <div class="main-content">
             <video id="cutePhrogVideo" width="320" height="240" autoplay loop muted playsinline>
-                <source src="assets/cute_phrog.mov" type="video/mp4">
+                <source src="assets/meme/2.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <h2>What is Phrog Coin?</h2>
